# oaip

./: .gitignore
LAB_1/67/: hexagon_shape.h  mainwindow.h  polygon_shape.h  rectangle_shape.h  renderer3d.h  shape.cpp  shapes3d.pro  star_shape.h
LAB_1/67/shapes3d_project/shapes3d/: circle_shape.cpp  circle_shape.h  custom_shape.cpp  custom_shape.h  hexagon_shape.cpp  mainwindow.cpp  moc_circle_shape.cpp  moc_custom_shape.cpp  moc_hexagon_shape.cpp  moc_mainwindow.cpp  moc_polygon_shape.cpp  moc_rectangle_shape.cpp  moc_renderer3d.cpp  moc_rhombus_shape.cpp  moc_shape.cpp  moc_square_shape.cpp  moc_star_shape.cpp  moc_triangle_shape.cpp  polygon_shape.cpp  rectangle_shape.cpp  renderer3d.cpp  rhombus_shape.cpp  rhombus_shape.h  shape.h  square_shape.cpp  square_shape.h  star_shape.cpp  triangle_shape.cpp  triangle_shape.h
LAB_1/CarApp3D_v3/CarApp3D/: CMakeLists.txt  glmesh.cpp  glmesh.h  glscene.cpp  glscene.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  movingrectangle.cpp  movingrectangle.h  resources.qrc  shape3d.h
LAB_2/: Date.cpp  Date.h  DynamicArray.cpp  DynamicArray.h  main.cpp
LAB_2/LabWork2_Qt_Visual/LabWork2/: AppButton.qml  AppComboBox.qml  AppFileDialog.qml  AppTabButton.qml  AppToast.qml  CMakeLists.txt  DCell.qml  DateCell.qml  DatesPage.qml  DeanPage.qml  ExprPage.qml  LabWork2.qmlproject  LabWork2.qmlproject.qtds  Main.qml  README.md  ToolSep.qml  TypeCheckPage.qml  debug.sh  run.sh  run_tests.sh  test_bb  test_blackbox.cpp  test_buttons_qtest.cpp  test_wb  test_whitebox.cpp
LAB_2/LabWork2_Qt_Visual/LabWork2/src/: main.cpp
LAB_2/LabWork2_Qt_Visual/LabWork2/src/backend/: Date.cpp  Date.h  DateBackend.cpp  DateBackend.h  DateController.cpp  DateController.h  Expression.cpp  Expression.h  ExpressionController.cpp  ExpressionController.h  Student.cpp  Student.h  StudentBackend.cpp  StudentBackend.h  StudentController.cpp  StudentController.h  expressioncontroller.h
LAB_2/files/: CMakeLists.txt  DateController.cpp  ExpressionController.cpp  StudentController.cpp
LAB_3/lab3_recursion/: Makefile  README.md  lab3.pro  lab3_recursion  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
LAB_3/qt6_modern/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_fix.cpp
LAB_4/lab4/: CMakeLists.txt
LAB_4/lab4/src/: main.cpp  mainwindow.cpp  mainwindow.h  pair.h  sorting.h  vector.h
LAB_5/: CMakeLists.txt  Lab5.pro  bitset.cpp  bitset.h  bitsetdemo.cpp  bitsetdemo.h  keyboardtrainer.cpp  keyboardtrainer.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  stringdemo.cpp  stringdemo.h
LAB_5/stringlib/: CMakeLists.txt  stringlib.cpp  stringlib.h  stringlib_global.h
LAB_6/: Makefile  lab6.pro  lab6_files  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
LAB_7/: CMakeLists.txt  animwidget.h  mainwindow.cpp  mainwindow.h  task1_queue.h  task2_bst.h  task3_hash.h  task4_openaddr.h  task5_deque.h
LAB_7/src/: animwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  task1_queue.h  task2_bst.h  task3_hash.h  task4_openaddr.h  task5_deque.h
LAB_8/: CMakeLists (1).txt  CMakeLists (2).txt  CMakeLists.txt  arrayheap.h  arrayheap_inst.cpp  arrayheapviswidget.cpp  arrayheapviswidget.h  bst.h  bstviswidget.cpp  bstviswidget.h  hashtable.h  hashtableviswidget.cpp  hashtableviswidget.h  listheap.h  listheap_inst.cpp  listheapviswidget.cpp  listheapviswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  treemap.h
